--- a/extras_src/manual/StdLibMan.asciidoc
+++ b/extras_src/manual/StdLibMan.asciidoc
@@ -2,7 +2,7 @@
 :doctitle: Alan Standard Library v{StdLibVer} User's Manual
 :author: Anssi Räisänen
 :revnumber: {StdLibVer}-WIP
-:revdate: 2020-10-08
+:revdate: 2020-10-09
 :lang: en
 :doctype: book
 // TOC Settings:
@@ -40,6 +40,7 @@
 // Links to examples files:
 :basement_alan: pass:q[link:basement.alan[`basement.alan`^,title="View example source file"]]
 :cave_alan: pass:q[link:cave.alan[`cave.alan`^,title="View example source file"]]
+:forest_alan: pass:q[link:forest.alan[`forest.alan`^,title="View example source file"]]
 :lab1_alan: pass:q[link:lab1.alan[`lab1.alan`^,title="View example source file"]]
 :lab2_alan: pass:q[link:lab2.alan[`lab2.alan`^,title="View example source file"]]
 :livingroom_alan: pass:q[link:livingroom.alan[`livingroom.alan`^,title="View example source file"]]
